mudanças de posição concluídas

--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-3-HTML-CSS-avançado/style2.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-3-HTML-CSS-avançado/style2.css
@@ -1,19 +1,37 @@
 .super-mario {
     width: 200px;
+    position: absolute;
+    top: 200px;
+    z-index: 1;
   }
   
   .goomba {
     width: 100px;
+    position: absolute;
+    top: 500px;
+    left: 50px;
+    z-index: 2;
   }
   
   .baloon {
-  
+    position: absolute;
+    z-index: 3;
+    left: 160px;
+    top: 50px;    
   }
   
   .speach {
     font-size: 25px;
+    position: absolute;
+    z-index: 4;
+    top: 90px;
+    left: 185px;
   }
   
   .bowser {
     width: 200px;
+    position: absolute;
+    z-index: 5;
+    left: 450px;
+    top: 220px;
   }
