--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-3-HTML-CSS-avançado/style5.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-3-HTML-CSS-avançado/style5.css
@@ -22,3 +22,19 @@ h1 em, h2 em, h3 em{
 li{
     font-size: 20px;
 }
+
+li em{
+    font-weight: bolder;
+}
+
+#linguagens li:not(:nth-child(n + 4)){
+    color: blue;
+}
+
+.pink-bg{
+    background-color: pink;
+}
+
+#sites li a:hover{
+    font-weight: bolder;
+}
