--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-3-HTML-CSS-avançado/style5.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-3-HTML-CSS-avançado/style5.css
@@ -35,6 +35,27 @@ li em{
     background-color: pink;
 }
 
-#sites li a:hover{
+#sites li a[href="https://pt.stackoverflow.com/"]:hover{
+    color: orange;
+    font-weight: bolder;
+}
+
+#sites li a[href="https://www.w3schools.com/"]:hover{
+    color: green;
+    font-weight: bolder;
+}
+
+#sites li a[href="https://developer.mozilla.org/pt-BR/"]:hover{
+    color: black;
+    font-weight: bolder;
+}
+
+#sites li a[href="https://devdocs.io/"]:hover{
+    color: yellow;
+    font-weight: bolder;
+}
+
+#sites li a[href="https://app.betrybe.com/"]:hover{
+    color: green;
     font-weight: bolder;
 }
