--- a/fundamentos/secao-05-HTML-CSS/dia-4-FlexBox-parte-2/exercicio1.css
+++ b/fundamentos/secao-05-HTML-CSS/dia-4-FlexBox-parte-2/exercicio1.css
@@ -53,23 +53,26 @@
     flex-direction: column;
     flex-basis: 700px;
     flex-grow: 10;
+    border: 1px solid black;
   }
   
   .movie-container h2 {
     margin: 40px 0;
     text-align: center;
+    border: 1px solid black;
   }
   
   .card-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    border: 1px solid black;
   }
   
   .card-container div {
     align-items: center;
     background-color: #5C687C;
-    border: black solid 1px;
+    border: black solid 2px;
     display: flex;
     height: 150px;
     justify-content: center;
@@ -85,6 +88,7 @@
     flex-basis: 350px;
     flex-grow: 1;
     align-self: center;
+    border: 1px solid black;
   }
   
   .aside-container h3, h4 {
