--- a/fundamentos/secao-05-HTML-CSS/dia-5-mobile-first/small-screen.css
+++ b/fundamentos/secao-05-HTML-CSS/dia-5-mobile-first/small-screen.css
@@ -5,27 +5,88 @@
  html {
     box-sizing: border-box;
   }
+
   *, *:before, *:after {
     box-sizing: inherit;
+    margin: 0 3%;
+    border: 0;
+    text-align: center;
   }
+
   body {
+    font-size: 1.6em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
+
   article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
+
   h1 {
+    font-size: 1.6em;
+    padding: 1em;
   }
+
   h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1em;
   }
+
   img {
-      max-width: 100%;
+    max-width: 100%;
   }
+
   main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
+
   section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
+
   figure {
-      margin: 0;
+    margin: 3%;
   }
+
   figcaption {
     font-size: .8em;
   }
+
+  @media screen and (min-width: 768px) {
+    body {
+      background-color: aqua;
+      font-size: 2em;
+      margin: 15px 6%;
+    }
+    section {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+    figure {
+      width: 40%;
+      margin-right: 4.5%;
+    }
+  }
+
+  @media screen and (min-width: 992px) {
+    body {
+      background-color: chartreuse;
+      font-size: 2.5em;
+      margin: 20px 5%;
+      max-width: 1130px;
+    }
+  }
+  
