--- a/fundamentos/secao-05-HTML-CSS/dia-5-mobile-first/alice.css
+++ b/fundamentos/secao-05-HTML-CSS/dia-5-mobile-first/alice.css
@@ -24,7 +24,7 @@ header {
 
 header nav {
   display: flex;
-  width: 45%;
+  width: 55%;
 }
 
 nav ul{
@@ -81,6 +81,8 @@ nav ul{
   flex-direction: column;
   align-items: center;
   font-size: 1.3em;
+  background-color: darkslateblue;
+  color: white;
 }
 
 .main-content h1 {
@@ -103,13 +105,41 @@ footer p {
   padding: 5px;
 }
 
-@media screen and (max-width: 600px) {
-}
-
 @media screen and (min-width: 600px) {
-  
+  header nav {
+    width: 37%;
+  }
+  .aside-one ul {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between ;
+    width: 90%;
+    margin: 20px;
+  }
+  .aside-one ul li {
+    width: 40%;
+  }
+  .aside-two ul {
+    align-items: center;
+    padding-left: 0;
+  }
 }
 
-@media screen and (max-width: 992px) {
-  
+@media screen and (min-width: 992px) {
+  header nav {
+    width: 32%;
+  }
+  .aside-one ul {
+    padding: 0;
+    justify-content: space-evenly;
+  }
+  .aside-one ul li {
+    padding: 5px;
+  }
+  .aside-two ul li {
+    padding: 5px;
+  }
+  footer p {
+    padding: 0;
+  }
 }
